# agenticdatingapp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  capacitor.config.ts  package-lock.json  package.json
.claude/: launch.json
_local-python-scaffold-backup/: .gitignore  README.md  pyproject.toml
_local-python-scaffold-backup/src/agenticdatingapp/engine/: __init__.py  example.py  models.py  negotiation.py
_local-python-scaffold-backup/tests/: test_negotiation.py
android/app/: build.gradle
docs/: app-store-readiness.md  app-store-submission.md  deployment-guide.md  native-build-guide.md  native-wrapper-decision.md  phase-2-prd.md  phase-3-prd.md  phase-4-prd.md  production-launch-prd.md  provider-activation.md  store-listing.json
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
native/www/: index.html
src/app/: globals.css  layout.tsx  manifest.ts  page.tsx
src/app/agent-run/: page.tsx
src/app/data-safety/: page.tsx
src/app/history/: page.tsx
src/app/household/: page.tsx
src/app/insights/: page.tsx
src/app/legacy/: page.tsx
src/app/login/: page.tsx
src/app/matches/: page.tsx
src/app/onboarding/: page.tsx
src/app/persona/: page.tsx
src/app/privacy/: page.tsx
src/components/: AppNav.tsx  PhotoManager.tsx
src/data/: candidates.ts
src/lib/: ageModel.ts  auth.ts  avatar.ts  candidateGen.ts  confidence.ts  config.ts  connectors.ts  db.ts  guardrails.ts  launchReadiness.ts  logisticsProviders.ts  marketplace.ts  matchThreshold.ts  providerReadiness.ts  spotify.ts  store.ts  types.ts
(+70 files in other folders)
